assign a territory to another state
